--- a/package.json
+++ b/package.json
@@ -1,1 +1,13 @@
-
+{
+  "name": "SoulSen Bot",
+  "description": "SoulSen's Bot",
+  "version": "0.0.0",
+  "main": "bot.js",
+  "scripts": {
+    "start": "node bot.js"
+  }
+  "dependencies": {
+    "discord.js": "11.1.0",
+    "request": "2.81.0",
+  }
+}
